# test-python

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  entrypoint  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml  merge.yaml  pull_request.yaml  release-build.yaml  release-create.yaml  release.yaml  security.yaml  tests.yaml
src/testrepo/: app.py
tests/: test_app.py  test_repo.py
